syntax = "proto3";

option go_package = "github.com/iotaledger/iota-core/pkg/network/protocols/core/models";

package models;

message Packet {
  oneof body {
    Block block = 1;
    BlockRequest block_request = 2;
    SlotCommitment slot_commitment = 3;
    SlotCommitmentRequest slot_commitment_request = 4;
    Attestations attestations = 5;
    AttestationsRequest attestations_request = 6;
    WarpSyncRequest warp_sync_request = 7;
    WarpSyncResponse warp_sync_response = 8;
  }
}

message Block {
  bytes bytes = 1;
}

message BlockRequest {
  bytes block_id = 1;
}

message SlotCommitment {
  bytes bytes = 1;
}

message SlotCommitmentRequest {
  bytes commitment_id = 1;
}

message Attestations {
  bytes commitment = 1;
  bytes attestations = 2;
  bytes merkle_proof = 3;
}

message AttestationsRequest {
  bytes commitment_id = 1;
}

message WarpSyncRequest {
  bytes commitment_id = 1;
}

message WarpSyncResponse {
  bytes commitment_id = 1;
  bytes payload = 2;
}
